force-app/main/default/objects/CountrySettings__c/CountrySettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Configuration settings at country level</description>
    <label>Country Settings</label>
</CustomObject>