force-app/main/default/objects/CountrySettings__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Country code</description>
    <inlineHelpText>Country code</inlineHelpText>
    <label>Country</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>