force-app/main/default/objects/CountrySettings__c/fields/dataValidation__c.field-meta.xml
<CustomField>
    <fullName>dataValidation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Si activo, la validación de datos está activa para el país</description>
    <label>Data Validation</label>
    <type>Checkbox</type>
</CustomField>