force-app/main/default/objects/CountrySettings__c/fields/EnableREVIEWSMS__c.field-meta.xml
<CustomField>
    <fullName>EnableREVIEWSMS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables the button to send a SMS to an account asking for a good review in Google</description>
    <inlineHelpText>Enables the button to send a SMS to an account asking for a good review in Google</inlineHelpText>
    <label>Enable REVIEW SMS</label>
    <type>Checkbox</type>
</CustomField>