force-app/main/default/objects/CountrySettings__c/fields/LeadDefaultOwnerID__c.field-meta.xml
<CustomField>
    <fullName>LeadDefaultOwnerID__c</fullName>
    <description>ID of the user that gets ownership of leads when no other owner can be assigned</description>
    <inlineHelpText>ID of the user that gets ownership of leads when no other owner can be assigned</inlineHelpText>
    <label>Lead Default Owner ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>